--- a/.tekton/sw-poc-push.yaml
+++ b/.tekton/sw-poc-push.yaml
@@ -27,6 +27,9 @@ spec:
     value: backend/Dockerfile.sw
   - name: path-context
     value: .
+  - name: prefetch-input
+    value: |
+      [{"type": "gomod"}, {"type": "rpm"}]
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
@@ -76,7 +79,7 @@ spec:
       description: Skip checks against built image
       name: skip-checks
       type: string
-    - default: "false"
+    - default: "true"
       description: Execute the build with network isolation
       name: hermetic
       type: string
@@ -168,6 +171,8 @@ spec:
       params:
       - name: input
         value: $(params.prefetch-input)
+      - name: dev-package-managers
+        value: "true"
       - name: SOURCE_ARTIFACT
         value: $(tasks.clone-repository.results.SOURCE_ARTIFACT)
       - name: ociStorage
